--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -5,7 +5,7 @@
             <a class="me-3 py-2 text-light text-decoration-none" href="/barber-shop/order">Записатись онлайн</a>
             <a class="me-3 py-2 text-light text-decoration-none" href="/barber-shop/barbers">Майстри</a>
             <a class="me-3 py-2 text-light text-decoration-none" href="/barber-shop/services">Послуги</a>
-            <a class="me-3 py-2 text-light text-decoration-none" href="#">Мій кабінет</a>
+            <a class="me-3 py-2 text-light text-decoration-none" href="/barber-shop/login">Мій кабінет</a>
         </nav>
     </div>
 </div>
