--- a/src/main/resources/templates/service/services.html
+++ b/src/main/resources/templates/service/services.html
@@ -14,7 +14,7 @@
         <div class="card-body">
             <h5 class="card-title" th:text="${service.service_name}"></h5>
             <p class="card-text" th:text="${service.price}"></p>
-            <a th:href="'/services/' + ${service.id}" class="btn btn-primary">Детальніше</a>
+            <a th:href="'/barber-shop/services/' + ${service.id}" class="btn btn-primary">Детальніше</a>
         </div>
     </div>
 </div>
