--- a/src/main/resources/templates/service/service-add.html
+++ b/src/main/resources/templates/service/service-add.html
@@ -11,7 +11,7 @@
 
 <div class="container mt-5 mb-5">
     <h1>Додавання послуги</h1>
-    <form action="/services/add" method="post">
+    <form action="/barber-shop/services/add" method="post">
         <div class="mb-3">
             <label for="serviceName" class="form-label">Назва послуги</label>
             <input type="text" class="form-control" id="serviceName" name="serviceName" placeholder="Введіть назву послуги" required />
