--- a/src/main/resources/templates/cabinet/login.html
+++ b/src/main/resources/templates/cabinet/login.html
@@ -2,9 +2,6 @@
 <html>
 <head>
     <title>Персональний кабінет</title>
-    <!-- Add the Bootstrap stylesheet -->
-<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"-->
-<!--          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://bootswatch.com/5/darkly/bootstrap.min.css">
 </head>
@@ -17,7 +14,7 @@
                     <h4>Login</h4>
                 </div>
                 <div class="card-body">
-                    <form action="/barber-shop/login" method="post">
+                    <form action="/barber-shop/p/login" method="post">
                         <div class="form-group">
                             <label for="email">Email:</label>
                             <input type="email" id="email" name="email" class="form-control" required>
