--- a/src/main/resources/templates/service/service-edit.html
+++ b/src/main/resources/templates/service/service-edit.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/5/darkly/bootstrap.min.css">
 </head>
 <body>
-<header th:insert="~{blocks/header :: header}"></header>
+<div th:insert="~{blocks/navbar :: navbar}"></div>
 
 <div class="container mt-5 mb-5">
     <h1>Редагування послуги</h1>
