--- a/src/main/resources/templates/barber/barber-add.html
+++ b/src/main/resources/templates/barber/barber-add.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="https://bootswatch.com/5/darkly/bootstrap.min.css">
 </head>
 <body>
-<header th:insert="~{blocks/header :: header}"></header>
+<div th:insert="~{blocks/navbar :: navbar}"></div>
 <div class="container mt-5 mb-5">
     <div class="row">
         <div class="col-md-6 mx-auto">
             <h1 class="text-center mb-4">Додавання перукаря</h1>
-            <form action="/barber-shop/barbers/add" method="post" enctype="multipart/form-data">
+            <form action="/barber-shop/adm/barbers/add" method="post" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="name">Ім'я</label>
                     <input type="text" name="name" id="name" class="form-control" required>
+
                 </div>
                 <div class="form-group">
                     <label for="email">Електронна скринька</label>
@@ -26,14 +27,12 @@
                     <label for="password">Пароль</label>
                     <input type="password" name="password" id="password" class="form-control" required>
                 </div>
-<!--                <div class="form-group">-->
-<!--                    <label for="image">Фото</label>-->
-<!--                    <input type="file" name="image" id="image" accept="image/png, image/jpeg" class="form-control-file" required>-->
-<!--                </div>-->
                 <div class="text-center">
                     <button type="submit" class="btn btn-success">Додати перукаря</button>
                 </div>
             </form>
+
+
         </div>
     </div>
 </div>
