--- a/src/main/resources/templates/barber/barber-edit.html
+++ b/src/main/resources/templates/barber/barber-edit.html
@@ -42,7 +42,17 @@
     <link rel="stylesheet" href="https://bootswatch.com/5/darkly/bootstrap.min.css">
 </head>
 <body>
-<header th:insert="~{blocks/header :: header}"></header>
+<!--<div th:insert="~{blocks/navbar :: navbar}"></div>-->
+<div th:switch="${role}">
+    <div th:case="'ADMIN'">
+        <div th:insert="~{blocks/navbar :: navbar}"></div>
+    </div>
+    <div th:case="'USER'">
+        <div th:insert="~{blocks/navbar-user :: navbar-user}"></div>
+    </div>
+
+</div>
+
 <div class="container mt-5 mb-5">
     <h1>Редагування інформації про перукаря</h1>
     <div >
@@ -56,7 +66,7 @@
                 <button type="submit" class="btn btn-success">Обновити</button>
             </div>
             <div style="margin-left: 50%; height: 305px;">
-                <img th:src="@{${barber.photosImagePath}}" width="250" height="300"/>
+                <img th:src="${barber.photos}" width="250" height="300"/>
             </div>
 
         </form>
